Fixed the overflow in the services section at small screens

--- a/style.css
+++ b/style.css
@@ -838,6 +838,7 @@ body {
 @media screen and (max-width: 500px) {
     .services_left_subsection, .services_right_subsection {
         padding-inline: 0;
+        min-width: 250px;
     }
     .main.services, .main.support {
         padding-inline: 0;
